// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs works when: displays selection and items 1`] = `
<DocumentFragment>
  <div
    class="relative 
        flex rounded-md [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 bg-green-400"
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
    >
      Last
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs works when: makes tabs disabled when loading 1`] = `
<DocumentFragment>
  <div
    class="relative 
        flex rounded-md [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 bg-green-400"
      disabled=""
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
      disabled=""
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
      disabled=""
    >
      Last
    </button>
    <div
      class="absolute z-10 top-0 right-0 left-0 bottom-0 bg-slate-300/40 rounded-r-md rounded-s-md "
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs works when: makes tabs disabled when loading 2`] = `
<DocumentFragment>
  <div
    class="relative 
        flex rounded-md [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 bg-green-400"
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white"
    >
      Last
    </button>
  </div>
</DocumentFragment>
`;
